--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Subtitles</title>
+	<title>HTML5-video-keyboard-control Demo Page</title>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript" src="keyboard.js"></script>
 </head>
 <body>
 <video width="320" id="video" controls>
-  <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-  <track src="subtitles.vtt" kind="subtitles" srclang="ru" label="Russian">
+	<source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+	<track src="subtitles.vtt" kind="subtitles" srclang="ru" label="Russian">
 </video>
 </body>
 </html>
