--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <script type="text/javascript" src="keyboard.js"></script>
 </head>
 <body>
-<video width="320" id="video" controls>
-	<source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-	<track src="subtitles.vtt" kind="subtitles" srclang="ru" label="Russian">
+<video width="640" height="360" id="video2" controls>
+  <source src="http://www.jplayer.org/video/webm/Big_Buck_Bunny_Trailer.webm">
+  <track src="subtitles.vtt" kind="subtitles" srclang="ru" label="Russian">
 </video>
 </body>
 </html>
