--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="keyboard.js"></script>
 </head>
 <body>
-<video width="640" height="360" id="video2" controls>
+<video width="640" height="360" id="video" controls>
   <source src="http://www.jplayer.org/video/webm/Big_Buck_Bunny_Trailer.webm">
   <track src="subtitles.vtt" kind="subtitles" srclang="ru" label="Russian">
 </video>
