--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <script type="text/javascript" src="keyboard.js"></script>
 </head>
 <body>
-<video width="640" height="360" id="video" controls>
-  <source src="http://www.jplayer.org/video/webm/Big_Buck_Bunny_Trailer.webm">
+<video width="960" height="400" id="video" controls>
+  <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
   <track src="subtitles.vtt" kind="subtitles" srclang="ru" label="Russian">
 </video>
 </body>
